# packaging-dists

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
src/packaging_dists/: __init__.py  _utils.py
tests/: test_parse.py
