[metadata]
name = packaging-dists
version = 0.1
description = Parse distribution file names for project information
long_description = file: README.rst
license = ISC License
url = https://github.com/uranusjr/packaging-dists

author = Tzu-ping Chung
author_email = uranusjr@gmail.com

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    packaging
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.packages.find]
where = src
