[metadata]
name = packaging-dists
version = 0.4
description = Parse distribution file names for project information
long_description = file: README.md
long_description_content_type = text/markdown
license = ISC
url = https://github.com/uranusjr/packaging-dists
license_files =
    LICENSE

author = Tzu-ping Chung
author_email = uranusjr@gmail.com

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    packaging
packages = find:
package_dir =
    = src
python_requires = >=3.7

[options.packages.find]
where = src
